[gd_scene load_steps=36 format=3 uid="uid://cq5o4ltsdppav"]

[ext_resource type="Script" uid="uid://dhidpe5o1ti6f" path="res://characters/player.gd" id="1_3vyb7"]
[ext_resource type="Resource" uid="uid://d03lbrlwq8scg" path="res://inventory folder/player_inventory.tres" id="2_g2els"]
[ext_resource type="Texture2D" uid="uid://sajieugvtma3" path="res://assets/UI/health_bar.png" id="3_j31ep"]
[ext_resource type="Texture2D" uid="uid://d25dtx743csac" path="res://assets/UI/healthfill.png" id="4_6t23p"]
[ext_resource type="Script" uid="uid://2jymnsvmrk54" path="res://scripts/healthbar.gd" id="5_n8jd0"]
[ext_resource type="Texture2D" uid="uid://5151v1sf8i40" path="res://assets/UI/energy_bar.png" id="6_q605b"]
[ext_resource type="Texture2D" uid="uid://cgsuv8uj3q2y2" path="res://assets/UI/energyfill.png" id="7_eho78"]
[ext_resource type="PackedScene" uid="uid://cuu5fln6g8uba" path="res://inventory folder/inventory_gui.tscn" id="8_eho78"]
[ext_resource type="PackedScene" uid="uid://b18ain4nxttr7" path="res://inventory folder/hotbar.tscn" id="9_8sqrr"]
[ext_resource type="PackedScene" uid="uid://daeoye4aquxc8" path="res://scenes/coins.tscn" id="10_6rrl0"]
[ext_resource type="PackedScene" uid="uid://r73bl7vbq1bt" path="res://scenes/held_item.tscn" id="11_eus45"]
[ext_resource type="Texture2D" uid="uid://b8vbeuhdlxurv" path="res://assets/UI/shop_menu_button.png" id="12_6rrl0"]
[ext_resource type="FontFile" uid="uid://eec8xja2jhxc" path="res://assets/UI/font.ttf" id="13_eus45"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_u8vuu"]
load_path = "res://.godot/imported/character1 spritesheet.png-1533b5fcad54565574ab925f8a739bee.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(0, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(16, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(32, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(0, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(16, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = SubResource("CompressedTexture2D_u8vuu")
region = Rect2(32, 96, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4flbx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}],
"loop": true,
"name": &"walk_down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}],
"loop": true,
"name": &"walk_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}],
"loop": true,
"name": &"walk_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}],
"loop": true,
"name": &"walk_up",
"speed": 3.0
}]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_onrkg"]
a = Vector2(-10, 13)
b = Vector2(0, 13)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2els"]
radius = 6.0
height = 24.0

[sub_resource type="Animation" id="Animation_8sqrr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_eho78"]
resource_name = "hurtBlink"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.490196), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6rrl0"]
_data = {
&"RESET": SubResource("Animation_8sqrr"),
&"hurtBlink": SubResource("Animation_eho78")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_3vyb7")
inventory = ExtResource("2_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
clip_children = 2
sprite_frames = SubResource("SpriteFrames_4flbx")
animation = &"idle"

[node name="ColorRect" type="ColorRect" parent="AnimatedSprite2D"]
offset_left = -8.0
offset_top = -10.0
offset_right = 8.0
offset_bottom = 17.0
color = Color(1, 0, 0, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 2)
shape = SubResource("SegmentShape2D_onrkg")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_g2els")

[node name="health_bar" type="TextureProgressBar" parent="."]
z_index = 3
offset_left = 97.0
offset_top = 21.0
offset_right = 147.0
offset_bottom = 81.0
value = 100.0
fill_mode = 3
texture_under = ExtResource("3_j31ep")
texture_progress = ExtResource("4_6t23p")
texture_progress_offset = Vector2(-13, -6)
script = ExtResource("5_n8jd0")

[node name="energy_bar" type="TextureProgressBar" parent="."]
visible = false
offset_left = 103.0
offset_top = 15.0
offset_right = 153.0
offset_bottom = 75.0
value = 100.0
fill_mode = 3
texture_under = ExtResource("6_q605b")
texture_progress = ExtResource("7_eho78")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(0.5, 0.5)
zoom = Vector2(4, 4)
metadata/_edit_lock_ = true

[node name="InventoryGui" parent="." instance=ExtResource("8_eho78")]
visible = false
z_index = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = -31.0
offset_right = 78.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="hotbar" parent="." instance=ExtResource("9_8sqrr")]
z_index = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -78.5
offset_top = 49.0
offset_right = 78.5
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="coin_count" parent="." instance=ExtResource("10_6rrl0")]
z_index = 3
position = Vector2(96, -73)

[node name="held_item" parent="." instance=ExtResource("11_eus45")]
position = Vector2(12, 3)

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6rrl0")
}

[node name="hurtTimer" type="Timer" parent="."]
one_shot = true

[node name="dialogue_box" type="NinePatchRect" parent="."]
z_index = 3
offset_left = -78.0
offset_top = 4.0
offset_right = 79.0
offset_bottom = 40.0
texture = ExtResource("12_6rrl0")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Label" type="Label" parent="dialogue_box"]
layout_mode = 0
offset_left = 3.0
offset_right = 156.0
offset_bottom = 34.0
theme_override_constants/line_spacing = -3
theme_override_fonts/font = ExtResource("13_eus45")
theme_override_font_sizes/font_size = 8
text = "test"
autowrap_mode = 2

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
